# ai-vs-ai-chess

./: .env.sample  Readme.md  pyproject.toml
Agents/: chess_agent.py
GameServer/: GameServer.ts  Readme.md
Spectate/: chessGame.js  index.html  styles.css
Tools/: api.py  chess_player.py  chess_toolkit.py
